--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,6 @@
 JWT_SECRET = 'supersecretkey'
 FLUTTERWAVE_SECRET_KEY = 'FLWSECK_TEST-8a4d087d74e46de9a4677c98456b4b25-X'
+HOST= "localhost"
+DATABASE="affiliate_saas"
+PASSWORD=
+USER="root"
